added dummy controller
