# api/admin-api-spec.yaml
@@ -384,6 +384,61 @@ paths:
         description:
           Adds a measurement for a specific Sigfox device    
  
+ 
+ 
+  /deleteOneSigfoxDeviceReading:
+    delete:
+      x-swagger-router-controller: sigfoxReadingController
+      operationId: deleteSigfoxReading
+      tags:
+        - Sigfox Device Readings
+      description: Deletes the selected reading for a Sigfox device
+      parameters:
+        - name: readingID
+          in: query
+          description: Database ID of the record to remove
+          schema:
+            type: string      
+      responses:
+        '200':
+          description: Successful request.
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/Success'
+        default:
+          description: Invalid request.
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/Error'
+ 
+  /deleteAllSigfoxDeviceReadings:
+    delete:
+      x-swagger-router-controller: sigfoxReadingController
+      operationId: deleteAllSigfoxReadings
+      tags:
+        - Sigfox Device Readings
+      description: Deletes all readings for a Sigfox device
+      parameters:
+        - name: readingID
+          in: query
+          description: Database ID of the device to remove readings for
+          schema:
+            type: string      
+      responses:
+        '200':
+          description: Successful request.
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/Success'
+        default:
+          description: Invalid request.
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/Error' 
     
   /getReadingsForDeviceID:
     get:
